Fix Java 8 compatibility and missing imports